Smaller UI fixes and DB acces improvements